2010-09-08  Martin Robinson  <mrobinson@igalia.com>

        Skip websocket tests until the GLib/GIO situation on the
        Debug bots can be sorted out.

        * platform/gtk/Skipped: Skip websocket tests.

2010-09-08  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Anders Carlsson.

        Add some entries to the WebKit2 skipped list, based on the buildbot
        https://bugs.webkit.org/show_bug.cgi?id=45380

        * platform/mac-wk2/Skipped:

2010-09-08  Andy Estes  <aestes@apple.com>

        Reviewed by Eric Carlson.

        Fallback content should be rendered when an <object> doesn't specify a
        data, type or classid attribute.
        https://bugs.webkit.org/show_bug.cgi?id=45364
        <rdar://problem/8375816>

        * fast/replaced/object-param-url-control-char.html:
        * fast/replaced/object-with-embed-url-param-expected.txt:
        * fast/replaced/object-with-embed-url-param.html:

2010-09-08  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Need a WebSocket implementation
        https://bugs.webkit.org/show_bug.cgi?id=45197

        * platform/gtk/Skipped: Unskip all WebSocket tests, as they are passing.

2010-09-08  Sergio Villar Senin  <svillar@igalia.com>

        Reviewed by Adam Barth.

        Errors in LayoutTests/http/tests/security/xss-DENIED-mime-type-execute-as-html.html
        https://bugs.webkit.org/show_bug.cgi?id=45377

        The test passes a MIME type as argument of a URL. A PHP code uses
        that MIME type to fill the Content-Type of the response.  If the
        MIME type is application/rss+xml the php decodes the '+' as a
        blank space and thus the returned content type is incorrectly set
        to "rss xml" instead of "rss+xml".

        * http/tests/security/resources/send-mime-types.php:
        * http/tests/security/xss-DENIED-mime-type-execute-as-html.html:

2010-09-07  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Dirk Schulze.
